# RL-Raft

./: .gitignore  README.md  REPORT.md  RESEARCH_NOTES.md  config.example.json  pyproject.toml
configs/: config.example.json
docs/: colab_training.ipynb
frontend/: app.js  index.html  style.css
rlraft/: __init__.py  cli.py  config.py  env.py  hub.py  llm_advisor.py  messages.py  node.py  raft_rules.py  supervisor.py  training.py
rlraft/core/: __init__.py  hub.py  messages.py  node.py  raft_rules.py  supervisor.py
rlraft/rl/: __init__.py  env.py  guidance.py  llm_advisor.py  llm_node.py  logger.py  mappo.py  policy.py  training.py
rlraft/sim/: __init__.py  experiments.py  sim.py
rlraft/web/: dashboard.py
runs/: analysis-smoke-policy.json  learned_policy.json
runs/experiments/: adaptive-20260501-004216.json  static-20260501-004210.json
runs/policies/: learned_policy.json  learned_policy_100.json  learned_ppo.json  llm-default-smoke-policy.json  llm_mappo_ep10000_n25.json  llm_mappo_ep5000_n100.json  llm_mappo_ep5000_n25.json  llm_mappo_ep5000_n50.json  llm_mappo_ep5000_n75.json
runs/simulations/: comparison-20260501-004216.csv  learned_policy.json  sim-comparison-20260501-012112.csv  sim-comparison-20260501-012312.csv  sim-comparison-20260501-012442.csv  sim-comparison-20260501-012532.csv  sim-comparison-20260501-183732.csv  sim-comparison-20260501-184006.csv  (+10 more)
scripts/: organize_runs.py  refactor.py  run_sweep.ps1
tests/: test_cluster.py  test_env.py  test_guidance.py  test_llm_advisor.py  test_raft_rules.py  test_sim.py  test_training.py
(+15 files in other folders)
